fix: enhances opening component spacing

--- a/src/utils/opening/opening.scss
+++ b/src/utils/opening/opening.scss
@@ -1,7 +1,7 @@
 
 .opening {
   text-align: center;
-  padding: 30px;
+  margin: 0 auto;
 
   .opening-title {
     font-size: 45px;
